@@ -20,6 +20,7 @@ Release 0.19.1 - Unreleased
    HBASE-1185  wrong request/sec in the gui reporting wrong
    HBASE-1238  Under upload, region servers are unable 
                to compact when loaded with hundreds of regions
+   HBASE-1247  checkAndSave doesn't Write Ahead Log
 
   IMPROVEMENTS
    HBASE-845   HCM.isTableEnabled doesn't really tell if it is, or not
